--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">  <link rel="stylesheet" href="./css/styles.css">
-    <title>Spa</title>
+    <title>Espacio Glam</title>
 </head>
 <body>
     <header class="header_f">
        
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-              <a class="font_color navbar-brand" href="#">Mi Spa</a>
+              <a class="font_color navbar-brand" href="#">Espacio Glam</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -41,8 +41,8 @@
           
         </nav>
         <div class="slogan-container">
-            <h1 class="slogan-text">Mi Spa</h1>
-            <h2 class="sub_slogan-text">Relájate, Renuévate, Revive.</h2>
+            <h1 class="slogan-text">Espacio Glam</h1>
+            <h2 class="sub_slogan-text">Brilla Siempre</h2>
         </div>
 
 
