--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
 
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="font_color navbar-brand" href="#">EGlam</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        <!-- <a class="font_color navbar-brand" href="#">EGlam</a> -->
+        <!-- <a class="font_color navbar-brand" href="#">EGlam</a> -->
+        <div class="contenedor_logo">
+          <img class="logo navbar-brand" src="./assets/logo.JPG" alt="logo_spa">
+        </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -78,76 +82,34 @@
         <!-- Card 1 -->
         <div class="col-12 col-sm-6 col-md-4">
           <div class="card h-300">
-            <img src="./assets/imagen1.jpg" class="card-img-top" alt="Descripción 1">
+            <img src="./assets/spa_manos.jpg" class="card-img-top" alt="Descripción 1">
             <div class="card-body">
-              <h5 class="card-title text-center">Titulo</h5>
-              <p class="card-text text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-                obcaecati unde odio? Quidem alias blanditiis ex est sed tempora aperiam iure officia voluptatibus sint.
-                Voluptate aut et ipsam soluta dolorum!</p>
+              <h5 class="card-title text-center">Spa de Uñas</h5>
+              <p class="card-text text-center">Nuestro spa de uñas ofrece manicuras y pedicuras personalizadas para embellecer y cuidar tus manos y pies. Disfruta de un servicio relajante con productos de alta calidad y diseños únicos.</p>
             </div>
           </div>
         </div>
         <!-- Card 2 -->
         <div class="col-12 col-sm-6 col-md-4">
           <div class="card h-300">
-            <img src="./assets/imagen2.jpg" class="card-img-top" alt="Descripción 2">
+            <img src="./assets/podologia.jpg" class="card-img-top" alt="Descripción 2">
             <div class="card-body">
-              <h5 class="card-title text-center">Titulo</h5>
-              <p class="card-text text-center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-                obcaecati unde odio? Quidem alias blanditiis ex est sed tempora aperiam iure officia voluptatibus sint.
-                Voluptate aut et ipsam soluta dolorum!</p>
+              <h5 class="card-title text-center">Podoestetica</h5>
+              <p class="card-text text-center">Nuestro servicio de podoestética combina cuidado profesional y estética para mantener tus pies saludables y bellos. Disfruta de tratamientos personalizados que revitalizan y embellecen tus pies.</p>
             </div>
           </div>
         </div>
         <!-- Card 3 -->
         <div class="col-12 col-sm-6 col-md-4">
           <div class="card h-300">
-            <img src="./assets/imagen1.jpg" class="card-img-top" alt="Descripción 3">
+            <img src="./assets/depilacion.jpg" class="card-img-top" alt="Descripción 3">
             <div class="card-body">
-              <h5 class="card-title text-center">Titulo</h5>
-              <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam quos
-                eos dolores quis quaerat rerum dolor architecto quisquam, illum explicabo deleniti magni cupiditate.
-                Harum, ullam eaque? Quidem tempora</p>
+              <h5 class="card-title text-center">Depilacion</h5>
+              <p class="card-text text-center">Ofrecemos un servicio de depilación profesional, garantizando una piel suave y libre de vello por más tiempo. Utilizamos técnicas de depilacion español para asegurar resultados efectivos y confortables.</p>
             </div>
           </div>
         </div>
-        <!-- Card 4 -->
-        <div class="col-12 col-sm-6 col-md-4">
-          <div class="card h-300">
-            <img src="./assets/imagen2.jpg" class="card-img-top" alt="Descripción 4">
-            <div class="card-body">
-              <h5 class="card-title text-center">Titulo</h5>
-              <p class="card-text text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptate
-                esse ducimus dolorum rerum et commodi illum illo consectetur, ea quisquam fugit vel similique id nihil
-                dignissimos ipsum? Nihil, tempora!</p>
-            </div>
-          </div>
-        </div>
-        <!-- Card 5 -->
-        <div class="col-12 col-sm-6 col-md-4">
-          <div class="card h-300">
-            <img src="./assets/imagen1.jpg" class="card-img-top" alt="Descripción 5">
-            <div class="card-body">
-              <h5 class="card-title text-center">Titulo</h5>
-              <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quis
-                sunt animi omnis dolore voluptas qui aspernatur quidem consectetur molestiae deserunt aperiam ratione
-                ipsam labore ipsa, fuga at ut error?</p>
-            </div>
-          </div>
-        </div>
-        <!-- Card 6 -->
-        <div class="col-12 col-sm-6 col-md-4">
-          <div class="card h-300">
-            <img src="./assets/imagen2.jpg" class="card-img-top" alt="Descripción 6">
-            <div class="card-body">
-              <h5 class="card-title text-center">Titulo</h5>
-              <p class="card-text text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio
-                laboriosam atque in perferendis? Ab ipsum minus, rem vero fuga dolores expedita similique nostrum
-                quaerat sed a, voluptatibus id impedit repellat!</p>
-            </div>
-          </div>
-        </div>
-      </div>
+      
     </section>
 
 
@@ -177,7 +139,7 @@
 
 
         <!-- Texto en el footer -->
-        <section class="mb-3">
+        <section class="mb-">
           <p>
             © 2024 Todos los derechos reservados | Desarrollado por Gabriel
           </p>
