--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- <a class="font_color navbar-brand" href="#">EGlam</a> -->
         <!-- <a class="font_color navbar-brand" href="#">EGlam</a> -->
         <div class="contenedor_logo">
-          <img class="logo navbar-brand" src="./assets/logo.JPG" alt="logo_spa">
+          <img class="logo navbar-brand" src="./assets/logo.jpg" alt="logo_spa">
         </div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
